Fix some bugs and tested in app

--- a/lib/basic_auth/config.haml
+++ b/lib/basic_auth/config.haml
@@ -10,3 +10,4 @@
 %li
   %label{ name: 'fullpath_regex' } Page fullpath regex:
   %input{ type: 'text', name: 'fullpath_regex' }
+  %p.inline-hints Do not include leading or trailing slashes
